# social-media-analytics

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
config/: __init__.py  base.py  dev.py  prod.py  staging.py
dashboard/: app.py  config.py  data.py  utils.py
dashboard/components/: __init__.py  charts.py  metrics.py  posts.py  sentiment.py  wordcloud.py
dbt/: dbt_project.yml  packages.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/core/: dim_date.sql  dim_users.sql  fct_comment_sentiment_summary.sql  fct_social_comments.sql  fct_social_posts.sql
dbt/models/staging/instagram/: stg_instagram_comments.sql  stg_instagram_posts.sql
dbt/models/staging/tiktok/: stg_tiktok_comments.sql  stg_tiktok_posts.sql
dbt/sources/: bronze.yml
ingestion/loaders/: snowflake.py
ingestion/scraper/: base.py  instagram.py  tiktok.py
orchestration/flows/: social_media_ingestion.py
warehouse/: 01_create_database.sql  02_create_schemas.sql  03_create_warehouses.sql  04_create_bronze_table.sql  04_create_bronze_talbe.sql
